# ifmo-kt

./: CNAME  README.md  Temy_KT_2018.txt  _config.yml  Вступление.docx  Сюжет.docx
TODO/: CMakeLists.txt  binary.cpp  hexfloat.cpp  hexfloat.h  order32.h
course1/Geany/: A.c  apple.cpp  bookshelf.cpp  concert.cpp  concert.in  ctf.cpp  input.txt  knapsack.cpp  knapsack.out  lcs.cpp  length_yandex.cxx  levenshtein.in  main.c  palindrome.in  test.cpp  umbrella.cpp  ws.cpp
course1/Geany/Rational/: CMakeLists.txt  Makefile
course1/algorithms/: A1.cpp  Example.cpp  G_num2brackets2.java  H_brackets2num2.java  README.md  antiqs.cpp  brackets.cpp  bst.cpp  bureaucracy.cpp  decode.cpp  formation.cpp  hemoglobin.cpp  hiberfil.cpp  hospital.cpp  isheap.cpp  kth.cpp  lis.cpp  list.cpp  postfix.cpp  priorityqueue-old.cpp  priorityqueue.cpp  priorityqueue2.cpp  radixsort.cpp  radixsort.cpp.save-failed  radixsort.new.1.cpp  rmq.cpp  rsq.cpp  saloon.cpp  sometest.cpp  sort-test.cpp  sort.cpp  stack-min.cpp  taxibus_variant.cpp  taxibus_variant2.cpp  Шпаргалка по алгоритмам.docx
course1/c_language/: README.md
course1/cde/: History_1.doc  History_2.doc  History_3.doc  History_all (1).doc
course1/computer_architecture/: 1.1 Логические элементы.md  1.1_Logic_circuits.md  1.2_Static_and_dynamic_RAM.md  1.3_Memory_types.md  1.4_Cache.md  1.5_Cache_coherence.md  1.6_Storage_devices.md  FAQ по Скакову.txt  README.md
course1/cplusplus/: README.md  phonebook.c
course1/cplusplus/task7/: CMakeLists.txt  lazy_string.h
course1/discrete_math/: hometask.docx
course1/english/: homework.txt
course1/history/: Kropotkin_Zapiski_revolyutsionera_201471.epub  Виды работ.doc  Германия_1.ppt  Германия_2.ppt  График_образец.doc  История.docx  Италия.ppt  Итоги_I мв.ppt  Мир в начале ХХ в_1.ppt  США.ppt  Сп_ литературы для подготовки к семинарам.doc  Список литературы.doc  Список фильмов.doc
course1/linal/: Беклемишев- Курс аналитической геометрии и линейной алгебры.djvu  Ильин В.А., Позняк Э.Г., Аналитическая геометрия.djvu
course1/matan/: Матан.docx
course1/paradigms/: ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  BinarySearch.java  BinarySearchMissing.java  CalcMD5.java  README.md  SHA256Sum.java  cnf.clj  expression.clj  gui.clj  link.txt  objectExpression.clj  oldjava (2).md  oldjava.md  reversi.clj  script2.js  scriptold.js  test.clj  Введение в программирование на Java __ Домашние задания.html
course1/physics/: 3_2_1_Tok_vrazochnykh_sedakh.docx  3_2_2_Magnitnoe_pole_vvakuume.docx  3_2_3_Magnitnoe_pole_v_veschestvee.docx  EL01_ok (1).doc  EL02_ok (1).doc  EL03_ok (1).doc  EL04_ok (1).doc  EL05_ok (1).doc  EL06_ok (1).doc  EL07_ok (1).doc  EL08_ok.doc  EL09_ok.doc  EL10_ok.doc  EL11_ok.doc  EL12_ok.doc  EL13_ok.doc  EL14_ok.doc  EL15_ok.doc  EL16_ok.doc  EL17_ok.doc  EL18_ok.doc  EL19_ok.doc
course2/MathLogic/: hw1.ml  hw1.mli  t.ml  task1.in  task1.js  task1.out  task2.js  task2.out
numerical_analysis/: README.md
task/: main.c
task1/: main.c  testmain.c
task2/: main.c
task3/: CMakeLists.txt  rational.cpp  rational.h  rational.hpp
task4/: CMakeLists.txt  format.cpp  format.h  format.hpp
task5/: CMakeLists.txt  format.h
task6/: CMakeLists.txt  lazy_string.h
task7/: lazy_string.cpp
(+469 files in other folders)
